se creo evento que te lleva a la informacion de la casa e ajustes visuales iniciales

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -1,3 +1,11 @@
 .thumbnail-wrapper > img {
     max-height: 180px;
 }
+
+.card-items-container {
+    height: 10em;
+}
+
+.MuiCardActionArea-root {
+    height: 100%;
+}
